<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Questions">

    <TextView
        android:id="@+id/questionID_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/questionnumberid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/question_id"
        android:layout_width="341dp"
        android:layout_height="148dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/question"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionID_id" />

    <Button
        android:id="@+id/checkanswer_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="140dp"
        android:text="@string/checkanswer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        android:onClick="OnClickCheckAnswer"/>


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="258dp"
        android:layout_height="126dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_id"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/correctAnswer_id"
            android:layout_width="234dp"
            android:layout_height="wrap_content"
            android:text="@string/correctAnswer"/>

        <RadioButton
            android:id="@+id/wronganswer1_id"
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:text="@string/wronganswer1"/>

        <RadioButton
            android:id="@+id/wronganswer2_id"
            android:layout_width="236dp"
            android:layout_height="wrap_content"
            android:text="@string/wronganswer2"/>

        <RadioButton
            android:id="@+id/wronganswer3_id"
            android:layout_width="239dp"
            android:layout_height="wrap_content"
            android:text="@string/wronganswer3"/>



    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>